scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Change_Order__c/Demo_Change_Order__c.object-meta.xml
<CustomObject>
    <label>Demo Change Order</label>
    <pluralLabel>Demo Change Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Change Order No.</label>
        <type>AutoNumber</type>
        <displayFormat>CO-{0000}</displayFormat>
        <startingNumber>1001</startingNumber>
    </nameField>
</CustomObject>