scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Change_Order__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>