scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Change_Order__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Lookup</type>
    <referenceTo>Demo_Project__c</referenceTo>
    <relationshipName>Change_Orders</relationshipName>
    <relationshipLabel>Change Orders</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>