scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Change_Order__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>