scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Change_Order__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <type>Text</type>
    <length>120</length>
</CustomField>