scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Change_Order__c/fields/Schedule_Impact_Days__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Impact_Days__c</fullName>
    <label>Schedule Impact (Days)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>